--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import App from '../components/App'
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
+		<App client:load></App>
 		<svg
 			class="astro-a"
 			width="495"
